@@ -3,6 +3,7 @@ import unittest
 
 from test import test_support
 import locale
+import datetime
 
 
 result_2004_text = """
@@ -261,6 +262,11 @@ class CalendarTestCase(unittest.TestCase):
         calendar.LocaleHTMLCalendar(locale='').formatmonthname(2010, 10)
         new_october = calendar.TextCalendar().formatmonthname(2010, 10, 10)
         self.assertEquals(old_october, new_october)
+
+    def test_itermonthdates(self):
+        # ensure itermonthdates doesn't overflow after datetime.MAXYEAR
+        # see #15421
+        list(calendar.Calendar().itermonthdates(datetime.MAXYEAR, 12))
 
 
 class MonthCalendarTestCase(unittest.TestCase):
